--- a/challenge/templates/index.html
+++ b/challenge/templates/index.html
@@ -16,7 +16,7 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-success btn-lg btn-block" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
@@ -34,7 +34,7 @@
 
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-8">
           <h2>Featured Mars Image</h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
@@ -45,12 +45,12 @@
           />
         </div>
 
-        <div class="col-md-4">
+        <div class="col xs-6 col-md-4">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
-            {{ mars.facts | safe }}
-          </div>
+            <div class="row" id="mars-facts">
+              <h4>Mars Facts</h4>
+              <table class="table table-hover"> {{ mars.facts | safe }}</table>
+            </div>
         </div>
       </div>
 
@@ -60,17 +60,17 @@
           <h2 class="text-center">Mars Hemispheres</h2>
         </div>
 
-        {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
-          <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
-            <div class="caption">
-              <h3>{{hemisphere.title}}</h3>
+          {% for hemisphere in mars.hemispheres %}
+          <div class="col-xs-6 col-md-3">
+            <div class="thumbnail">
+              <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+              <div class="caption">
+                <h3>{{hemisphere.title}}</h3>
+              </div>
             </div>
           </div>
+          {% endfor %}
         </div>
-        {% endfor %}
-      </div>
     </div>
   </body>
 </html>
